--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
 img {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
-  object-fit: cover;
 }
 
 .col-class {
-  margin-right: 10px !important;
+  /* margin-right: 10px !important; */
   padding-top: 10px;
-  padding-right: 20px;
+  padding-right: 30px;
 }
 
 .h3 {
   margin-top: 30px;
   text-align: center;
   font-size: 5;
+}
+
+.img-height {
+  height: 50vh;
 }
